# scrapy-newsutils

./: .gitignore  README.md  dev-requirements.txt  requirements.txt  setup.cfg
demo/: default_settings.py  items.py  middlewares.py  requirements.txt  scrapy.cfg  settings.py  spiders.json
demo/commands/: crawlall.py
demo/spiders/: gn_africaguinee.py  gn_guineematin.py
doc/: playground.md
src/: .env.example
src/news_utils/: __init__.py  appsettings.py  console.py  default_settings.py  logformatter.py  logo.py  pipelines.py
src/news_utils/base/: __init__.py  items.py  logging.py  nlp.py  pipelines.py  spiders.py
src/newsutils/: README.md  __init__.py  appsettings.py  exceptions.py  fields.py  helpers.py  logging.py  logo.py  nlp.py  pipelines.py  spiderloader.py  storage.py
src/newsutils/base/: __init__.py  items.py  pipelines.py  posts.py  spiders.py
src/newsutils/bots/: __init__.py  appsettings.py  default_settings.py  funcs.py  pipelines.py
src/newsutils/bots/base/: __init__.py  items.py  logging.py  nlp.py  pipelines.py  spiders.py
src/newsutils/conf/: __init__.py  constants.py  globals.py  mixins.py  post_item.py  posts.py  settings.py  sports.py  utils.py
src/newsutils/crawl/: __init__.py  commands.py  day.py  items.py  pipelines.py  spiders.py
src/newsutils/doc/: api-facebook.md
src/newsutils/ezines/: __init__.py  sports.py  thesportsdb.py
src/newsutils/requests/: sports.py
src/newsutils/scrapy/: nlp.py  pipelines.py
src/newsutils/scrapy/base/: __init__.py  items.py  pipelines.py  posts.py  settings.py  spiders.py
src/scrapy_news_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scrapy_newsutils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_storage.py
