[metadata]
name = scrapy-newsutils
version = 0.1
description = Helpers for Scrapy projects
long_description = file: README.rst
url =
author = EC
author_email = ceduth@techoutlooks.com
license = BSD-3-Clause  # Example license
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
python_requires = >=3.9
package_dir =
    = src
packages = find:
install_requires =

    # https://stackoverflow.com/a/53706140
    daily-query @ git+https://github.com/techoutlooks/daily-query.git#egg=daily_query

    Scrapy
    newspaper3k
    nltk
    htmldate
    pycountry
    pymongo
    Pillow
    image-quality
    schedule
    ordered-set
    rich
    environs
    psutil
    ratelimit

[options.packages.find]
where = src

[options.extras_require]
nlp =
    newsnlp @ git+https://github.com/techoutlooks/newsnlp.git#egg=newsnlp
